--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: todo-list
-          image: shihab24/todo-list:{{ .Values.imageTag }}
+          image: rameshkumarverma/app:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
